[package]
name = "fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"

[dev-dependencies]
num-complex = { version = "0.4", features = ["rand"] }
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.4"
rand_distr = "0.4.3"

[[bench]]
name = "benches"
harness = false
